force-app/main/default/objects/ServiceTransaction__c/ServiceTransaction__c.object-meta.xml
<CustomObject>
    <description>Objeto para registrar as transações dos serviços de API.</description>
    <label>Service Transaction</label>
    <nameField>
        <label>Service Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>