force-app/main/default/objects/ServiceTransaction__c/fields/CustomerInteractionId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Interaction Id</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipLabel>Service Transaction</relationshipLabel>
    <relationshipName>Service_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>