force-app/main/default/objects/ServiceTransaction__c/fields/HTTP_Header__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Header__c</fullName>
    <label>HTTP Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>