force-app/main/default/objects/ServiceTransaction__c/fields/HTTPStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HTTPStatusCode__c</fullName>
    <label>HTTP StatusCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>