force-app/main/default/objects/ServiceTransaction__c/fields/OperationStatus__c.field-meta.xml
<CustomField>
    <fullName>OperationStatus__c</fullName>
    <label>OperationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Transacted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>