force-app/main/default/objects/ServiceTransaction__c/fields/SFException__c.field-meta.xml
<CustomField>
    <fullName>SFException__c</fullName>
    <label>SF Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>