force-app/main/default/objects/ServiceTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>offer</value>
    </filters>
    <label>Tudo</label>
</ListView>