force-app/main/default/objects/ServiceTransaction__c/listViews/AllServiceTransaction.listView-meta.xml
<ListView>
    <fullName>AllServiceTransaction</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HTTPStatusCode__c</columns>
    <columns>Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Response__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todos os Meus</label>
</ListView>