force-app/main/default/objects/ServiceTransaction__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/20/2021 2:00 PM</value>
    </filters>
    <label>Hoje</label>
</ListView>